--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -3,7 +3,7 @@ name: Run Data Sync
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 * * * *"
   push:
     branches:
       - master
@@ -21,13 +21,13 @@ on:
 
 env:
   # please change to your own config.
-  RUN_TYPE: pass # support strava/nike/garmin/garmin_cn/keep/only_gpx/nike_to_strava/strava_to_garmin/strava_to_garmin_cn/garmin_to_strava/garmin_to_strava_cn, Please change the 'pass' it to your own
-  ATHLETE: ben_29
-  TITLE: Workouts
-  MIN_GRID_DISTANCE: 10 # change min distance here
-  TITLE_GRID: Over 10km Workouts # also here
-  GITHUB_NAME: ben_29
-  GITHUB_EMAIL: ben_29@live.com
+  RUN_TYPE: strava # support strava/nike/garmin/garmin_cn/keep/only_gpx/nike_to_strava/strava_to_garmin/strava_to_garmin_cn/garmin_to_strava/garmin_to_strava_cn, Please change the 'pass' it to your own
+  ATHLETE: 生如胡杨
+  TITLE: My Workouts Map
+  MIN_GRID_DISTANCE: 15 # change min distance here
+  TITLE_GRID: Over 15km Workouts # also here
+  GITHUB_NAME: shengruhuyang
+  GITHUB_EMAIL: xauaterbaihao@foxmail.com
 
 jobs:
   sync:
