--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -23,7 +23,7 @@ env:
   # please change to your own config.
   RUN_TYPE: strava # support strava/nike/garmin/garmin_cn/keep/only_gpx/nike_to_strava/strava_to_garmin/strava_to_garmin_cn/garmin_to_strava/garmin_to_strava_cn, Please change the 'pass' it to your own
   ATHLETE: 生如胡杨
-  TITLE: My Workouts Map
+  TITLE: 积跬步，至千里
   MIN_GRID_DISTANCE: 15 # change min distance here
   TITLE_GRID: Over 15km Workouts # also here
   GITHUB_NAME: shengruhuyang
